- Bug #41525 ReflectionParameter::getPosition() not available # This was supposed to be dropped in 5.1.4, I wonder why thisis not in # because the functionality is documented. # [ DOC ] Make sure the function documentation is correct for: # ReflectionParameter::getPosition # ReflectionParameter::getDeclaringFunction # ReflectionFunction::getExtension # ReflectionFunction::getExtensionName